[package]
name = "mpp"
version = "0.1.0"
authors = ["Adolfo H. Wernke <adolfohw@gmail.com>"]
edition = "2018"
categories = ["command-line-utilities", "development-tools", "embedded", "parser-implementations"]
keywords = ["m++", "m+++", "furb"]
license = "MIT"
readme = "README"
repository = "https://github.com/adolfohw/mpp"
description = "An assembler for M++ (2017 edition)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-utils = "0.1"
logos = "0.11"
thiserror = "1.0"